# quiz-game

./: .gitignore  .yamllint.yml  CLAUDE.md  Justfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  update-storybook-snapshots.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: CLAUDE.md  Cargo.toml
backend/src/: config.rs  errors.rs  lib.rs  main.rs
backend/src/handlers/: mod.rs  quiz_upload.rs  session.rs  ws.rs
backend/src/models/: leaderboard.rs  mod.rs  player.rs  quiz.rs  scoring_rule.rs  session.rs
backend/src/services/: game_engine.rs  mod.rs  scoring.rs  session_manager.rs
backend/tests/: api_contract_test.rs  game_flow_test.rs  leaderboard_test.rs  quiz_parser_test.rs  scoring_rule_test.rs  scoring_test.rs  session_manager_test.rs  ws_scoring_rule_test.rs
docs/: architecture.md  flow-question.mmd  quickstart.md  session-lifecycle.mmd
docs/diagrams/: architecture.mmd  flow-join.mmd  flow-position-race.mmd  flow-question.mmd  flow-scoring-rule.mmd  flow-streak-bonus.mmd  flow-time-limit.mmd  overview.mmd  session-lifecycle.mmd
e2e/: CLAUDE.md  package-lock.json  package.json  playwright.config.ts  playwright.storybook.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  serve-storybook.mjs
fixtures/: sample.txt
frontend/: CLAUDE.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsbuild.config.ts  rspack.config.ts  tsconfig.json  vitest.config.ts
(+159 files in other folders)
