[package]
name = "quiz-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
futures-util = "0.3"

[dev-dependencies]
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
